db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: wordpress
spec:
  clusterIP: None
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
